done for todo list

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Todo list</title>
 </head>
 
-<body>
-    <div class="h-screen bg-gray-500">
-        <nav class="flex justify-center p-4 bg-gray-600">
+<body class="bg-gray-500" >
+    <div class="h-screen ">
+        <nav class="flex justify-center p-4  bg-gray-600">
             <h1 class="text-white text-2xl font-bold"> Beigi Todo List</h1>
         </nav>
         <img src="asset/img/1.jpg" alt="">
@@ -29,14 +29,14 @@
             </form>
 
             <div class="flex justify-center ">
-                <div class=" relative justify-center mt-6 w-6/12 h-96 bg-gray-200 px-12 py-8 rounded-lg">
+                <div class=" relative justify-center mt-6 w-6/12 h-auto bg-gray-200 px-12 py-8 rounded-lg">
 
                     <ul id="incomplete-tasks" class="text-center  ">
 
 
                     </ul>
 
-                    <h2 class="flex flex-col  text-center my-4 m ">Completed</h2>
+                    <h2 class="flex flex-col  text-center my-4  ">Completed</h2>
 
                     <ul id="completed-tasks" class="text-center">
 
